Add clj-async-profiler in `project.clj`