@@ -1,4 +1,4 @@
 #!/bin/bash
 
 # Run the JAR file with Java options
-java --enable-preview -jar ./target/uberjar/clojox-0.1.0-SNAPSHOT-standalone.jar "$@"
+java -Djdk.attach.allowAttachSelf -XX:+UnlockDiagnosticVMOptions -XX:+DebugNonSafepoints --enable-preview -jar ./target/uberjar/clojox-0.1.0-SNAPSHOT-standalone.jar "$@"
